# apriporta

./: .dockerignore  .gitignore  Dockerfile  GEMINI.md  README.md  pyproject.toml  skaffold.yaml
.gemini/: config.yaml
app/: main.py
app/static/: debug.html  debug.js  index.html  script.js
k8s/dev/: deployment.yaml  kustomization.yaml  secret.yaml.dist  service.yaml
